--- a/init.el.org
+++ b/init.el.org
@@ -6,7 +6,7 @@ with Wiegley's [[https://github.com/jwiegley/use-package][use-package]] gizmo.
 
 * Install packages
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
-  (defvar init-first-run t
+  (defvar init-first-run nil
   "I want to only run package-refresh on the first run.")
   (require 'package)
   
@@ -182,20 +182,376 @@ are also made.
 #+end_quote
 Maybe I'll do that sometime.
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
+  (use-package org-id
+    :defer t)
+
   (use-package org
     :load-path "~/git/org-mode/lisp"
     :bind (("C-c a"   . org-agenda)
            ("C-c C-w" . org-refile)
            ("C-c c"   . org-capture))
     :config
+    (defvar org-directory (concat dropbox-root
+                                  (if (string-equal system-type "windows-nt")
+                                      "~/../../Dropbox/org"
+                                    "~/Dropbox/org"))
+      "The rood directory of my org files.")
     (let ((dropbox-dir (if (string-equal system-type "windows-nt")
                            "~/../../Dropbox/org/agenda"
                          "~/Dropbox/org/agenda")))
+
       (setq org-agenda-files
             (delq nil
                   (mapcar (lambda (x) (and (file-exists-p x) x))
                           (directory-files
-                           (expand-file-name dropbox-dir) t org-agenda-file-regexp))))))
+                           (expand-file-name dropbox-dir) t org-agenda-file-regexp))))
+      (setq org-todo-keywords
+            (quote ((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d)")
+                    (sequence "WAITING(w@/!)" "HOLD(h@/!)" "|" "CANCELLED(c@/!)" "PHONE" "MEETING"))))
+      
+      (setq org-todo-keyword-faces
+            (quote (("TODO" :foreground "red" :weight bold)
+                    ("NEXT" :foreground "blue" :weight bold)
+                    ("DONE" :foreground "forest green" :weight bold)
+                    ("WAITING" :foreground "orange" :weight bold)
+                    ("HOLD" :foreground "magenta" :weight bold)
+                    ("CANCELLED" :foreground "forest green" :weight bold)
+                    ("MEETING" :foreground "forest green" :weight bold)
+                    ("PHONE" :foreground "forest green" :weight bold))))
+      (setq org-use-fast-todo-selection t)
+      (setq org-todo-state-tags-triggers
+            (quote (("CANCELLED" ("CANCELLED" . t))
+                    ("WAITING" ("WAITING" . t))
+                    ("HOLD" ("WAITING") ("HOLD" . t))
+                    (done ("WAITING") ("HOLD"))
+                    ("TODO" ("WAITING") ("CANCELLED") ("HOLD"))
+                    ("NEXT" ("WAITING") ("CANCELLED") ("HOLD"))
+                    ("DONE" ("WAITING") ("CANCELLED") ("HOLD")))))
+      
+      (setq org-default-notes-file (concat dropbox-root "/agenda/refile.org"))
+      (setq org-capture-templates
+            (quote (("t" "todo" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* TODO %?\n%U\n%a\n" :clock-in t :clock-resume t)
+                    ("r" "respond" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* NEXT Respond to %:from on %:subject\nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
+                    ("n" "note" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* %? :NOTE:\n%U\n%a\n" :clock-in t :clock-resume t)
+                    ("j" "Journal" entry (file+datetree "~/../../Dropbox/org/agenda/diary.org")
+                     "* %?\n%U\n" :clock-in t :clock-resume t)
+                    ("w" "org-protocol" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* TODO Review %c\n%U\n" :immediate-finish t)
+                    ("m" "Meeting" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
+                    ("p" "Phone call" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* PHONE %? :PHONE:\n%U" :clock-in t :clock-resume t)
+                    ("h" "Habit" entry (file "~/../../Dropbox/org/agenda/refile.org")
+                     "* NEXT %?\n%U\n%a\nSCHEDULED: %(format-time-string \"%<<%Y-%m-%d %a .+1d/3d>>\")\n:PROPERTIES:\n:STYLE: habit\n:REPEAT_TO_STATE: NEXT\n:END:\n"))))
+      
+      (defun bh/remove-empty-drawer-on-clock-out ()
+        (interactive)
+        (save-excursion
+          (beginning-of-line 0)
+          (org-remove-empty-drawer-at "LOGBOOK" (point))))
+      
+      (add-hook 'org-clock-out-hook 'bh/remove-empty-drawer-on-clock-out 'append)
+      (setq org-refile-targets (quote ((nil :maxlevel . 9)
+                                       (org-agenda-files :maxlevel . 9))))
+      ;; Do not dim blocked tasks
+      (setq org-agenda-dim-blocked-tasks nil)
+      
+      ;; Compact the block agenda view
+      (setq org-agenda-compact-blocks t)
+      
+      ;; Custom agenda command definitions
+      (setq org-agenda-custom-commands
+            (quote (("N" "Notes" tags "NOTE"
+                     ((org-agenda-overriding-header "Notes")
+                      (org-tags-match-list-sublevels t)))
+                    ("h" "Habits" tags-todo "STYLE=\"habit\""
+                     ((org-agenda-overriding-header "Habits")
+                      (org-agenda-sorting-strategy
+                       '(todo-state-down effort-up category-keep))))
+                    (" " "Agenda"
+                     ((agenda "" nil)
+                      (tags "REFILE"
+                            ((org-agenda-overriding-header "Tasks to Refile")
+                             (org-tags-match-list-sublevels nil)))
+                      (tags-todo "-CANCELLED/!"
+                                 ((org-agenda-overriding-header "Stuck Projects")
+                                  (org-agenda-skip-function 'bh/skip-non-stuck-projects)
+                                  (org-agenda-sorting-strategy
+                                   '(category-keep))))
+                      (tags-todo "-HOLD-CANCELLED/!"
+                                 ((org-agenda-overriding-header "Projects")
+                                  (org-agenda-skip-function 'bh/skip-non-projects)
+                                  (org-tags-match-list-sublevels 'indented)
+                                  (org-agenda-sorting-strategy
+                                   '(category-keep))))
+                      (tags-todo "-CANCELLED/!NEXT"
+                                 ((org-agenda-overriding-header (concat "Project Next Tasks"
+                                                                        (if bh/hide-scheduled-and-waiting-next-tasks
+                                                                            ""
+                                                                          " (including WAITING and SCHEDULED tasks)")))
+                                  (org-agenda-skip-function 'bh/skip-projects-and-habits-and-single-tasks)
+                                  (org-tags-match-list-sublevels t)
+                                  (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-sorting-strategy
+                                   '(todo-state-down effort-up category-keep))))
+                      (tags-todo "-REFILE-CANCELLED-WAITING-HOLD/!"
+                                 ((org-agenda-overriding-header (concat "Project Subtasks"
+                                                                        (if bh/hide-scheduled-and-waiting-next-tasks
+                                                                            ""
+                                                                          " (including WAITING and SCHEDULED tasks)")))
+                                  (org-agenda-skip-function 'bh/skip-non-project-tasks)
+                                  (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-sorting-strategy
+                                   '(category-keep))))
+                      (tags-todo "-REFILE-CANCELLED-WAITING-HOLD/!"
+                                 ((org-agenda-overriding-header (concat "Standalone Tasks"
+                                                                        (if bh/hide-scheduled-and-waiting-next-tasks
+                                                                            ""
+                                                                          " (including WAITING and SCHEDULED tasks)")))
+                                  (org-agenda-skip-function 'bh/skip-project-tasks)
+                                  (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-with-date bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-sorting-strategy
+                                   '(category-keep))))
+                      (tags-todo "-CANCELLED+WAITING|HOLD/!"
+                                 ((org-agenda-overriding-header (concat "Waiting and Postponed Tasks"
+                                                                        (if bh/hide-scheduled-and-waiting-next-tasks
+                                                                            ""
+                                                                          " (including WAITING and SCHEDULED tasks)")))
+                                  (org-agenda-skip-function 'bh/skip-non-tasks)
+                                  (org-tags-match-list-sublevels nil)
+                                  (org-agenda-todo-ignore-scheduled bh/hide-scheduled-and-waiting-next-tasks)
+                                  (org-agenda-todo-ignore-deadlines bh/hide-scheduled-and-waiting-next-tasks)))
+                      (tags "-REFILE/"
+                            ((org-agenda-overriding-header "Tasks to Archive")
+                             (org-agenda-skip-function 'bh/skip-non-archivable-tasks)
+                             (org-tags-match-list-sublevels nil))))
+                     nil))))
+      (defun bh/org-auto-exclude-function (tag)
+        "Automatic task exclusion in the agenda with / RET"
+        (and (cond
+              ((string= tag "hold")
+               t)
+              ((string= tag "farm")
+               t))
+             (concat "-" tag)))
+      
+      (setq org-agenda-auto-exclude-function 'bh/org-auto-exclude-function)
+      ;;
+      ;; Resume clocking task when emacs is restarted
+      (org-clock-persistence-insinuate)
+      ;;
+      ;; Show lot of clocking history so it's easy to pick items off the C-F11 list
+      (setq org-clock-history-length 23)
+      ;; Resume clocking task on clock-in if the clock is open
+      (setq org-clock-in-resume t)
+      ;; Change tasks to NEXT when clocking in
+      (setq org-clock-in-switch-to-state 'bh/clock-in-to-next)
+      ;; Separate drawers for clocking and logs
+      (setq org-drawers (quote ("PROPERTIES" "LOGBOOK")))
+      ;; Save clock data and state changes and notes in the LOGBOOK drawer
+      (setq org-clock-into-drawer t)
+      ;; Sometimes I change tasks I'm clocking quickly - this removes clocked tasks with 0:00 duration
+      (setq org-clock-out-remove-zero-time-clocks t)
+      ;; Clock out when moving task to a done state
+      (setq org-clock-out-when-done t)
+      ;; Save the running clock and all clock history when exiting Emacs, load it on startup
+      (setq org-clock-persist t)
+      ;; Do not prompt to resume an active clock
+      (setq org-clock-persist-query-resume nil)
+      ;; Enable auto clock resolution for finding open clocks
+      (setq org-clock-auto-clock-resolution (quote when-no-clock-is-running))
+      ;; Include current clocking task in clock reports
+      (setq org-clock-report-include-clocking-task t)
+      
+      (setq bh/keep-clock-running nil)
+      
+      (defun bh/clock-in-to-next (kw)
+        "Switch a task from TODO to NEXT when clocking in.
+    Skips capture tasks, projects, and subprojects.
+    Switch projects and subprojects from NEXT back to TODO"
+        (when (not (and (boundp 'org-capture-mode) org-capture-mode))
+          (cond
+           ((and (member (org-get-todo-state) (list "TODO"))
+                 (bh/is-task-p))
+            "NEXT")
+           ((and (member (org-get-todo-state) (list "NEXT"))
+                 (bh/is-project-p))
+            "TODO"))))
+      
+      (defun bh/find-project-task ()
+        "Move point to the parent (project) task if any"
+        (save-restriction
+          (widen)
+          (let ((parent-task (save-excursion (org-back-to-heading 'invisible-ok) (point))))
+            (while (org-up-heading-safe)
+              (when (member (nth 2 (org-heading-components)) org-todo-keywords-1)
+                (setq parent-task (point))))
+            (goto-char parent-task)
+            parent-task)))
+      
+      (defun bh/punch-in (arg)
+        "Start continuous clocking and set the default task to the
+    selected task.  If no task is selected set the Organization task
+    as the default task."
+        (interactive "p")
+        (setq bh/keep-clock-running t)
+        (if (equal major-mode 'org-agenda-mode)
+            ;;
+            ;; We're in the agenda
+            ;;
+            (let* ((marker (org-get-at-bol 'org-hd-marker))
+                   (tags (org-with-point-at marker (org-get-tags-at))))
+              (if (and (eq arg 4) tags)
+                  (org-agenda-clock-in '(16))
+                (bh/clock-in-organization-task-as-default)))
+          ;;
+          ;; We are not in the agenda
+          ;;
+          (save-restriction
+            (widen)
+                                          ; Find the tags on the current task
+            (if (and (equal major-mode 'org-mode) (not (org-before-first-heading-p)) (eq arg 4))
+                (org-clock-in '(16))
+              (bh/clock-in-organization-task-as-default)))))
+      
+      (defun bh/punch-out ()
+        (interactive)
+        (setq bh/keep-clock-running nil)
+        (when (org-clock-is-active)
+          (org-clock-out))
+        (org-agenda-remove-restriction-lock))
+      
+      (defun bh/clock-in-default-task ()
+        (save-excursion
+          (org-with-point-at org-clock-default-task
+            (org-clock-in))))
+      
+      (defun bh/clock-in-parent-task ()
+        "Move point to the parent (project) task if any and clock in"
+        (let ((parent-task))
+          (save-excursion
+            (save-restriction
+              (widen)
+              (while (and (not parent-task) (org-up-heading-safe))
+                (when (member (nth 2 (org-heading-components)) org-todo-keywords-1)
+                  (setq parent-task (point))))
+              (if parent-task
+                  (org-with-point-at parent-task
+                    (org-clock-in))
+                (when bh/keep-clock-running
+                  (bh/clock-in-default-task)))))))
+      
+      (defvar bh/organization-task-id "eb155a82-92b2-4f25-a3c6-0304591af2f9")
+      
+      (defun bh/clock-in-organization-task-as-default ()
+        (interactive)
+        (org-with-point-at (org-id-find bh/organization-task-id 'marker)
+          (org-clock-in '(16))))
+      
+      (defun bh/clock-out-maybe ()
+        (when (and bh/keep-clock-running
+                   (not org-clock-clocking-in)
+                   (marker-buffer org-clock-default-task)
+                   (not org-clock-resolving-clocks-due-to-idleness))
+          (bh/clock-in-parent-task)))
+      
+      (add-hook 'org-clock-out-hook 'bh/clock-out-maybe 'append)
+      (require 'org-id)
+      (defun bh/clock-in-task-by-id (id)
+        "Clock in a task by id"
+        (org-with-point-at (org-id-find id 'marker)
+          (org-clock-in nil)))
+      
+      (defun bh/clock-in-last-task (arg)
+        "Clock in the interrupted task if there is one
+    Skip the default task and get the next one.
+    A prefix arg forces clock in of the default task."
+        (interactive "p")
+        (let ((clock-in-to-task
+               (cond
+                ((eq arg 4) org-clock-default-task)
+                ((and (org-clock-is-active)
+                      (equal org-clock-default-task (cadr org-clock-history)))
+                 (caddr org-clock-history))
+                ((org-clock-is-active) (cadr org-clock-history))
+                ((equal org-clock-default-task (car org-clock-history)) (cadr org-clock-history))
+                (t (car org-clock-history)))))
+          (widen)
+          (org-with-point-at clock-in-to-task
+            (org-clock-in nil))))
+      
+      (setq org-agenda-clock-consistency-checks
+            (quote (:max-duration "4:00"
+                                  :min-duration 0
+                                  :max-gap 0
+                                  :gap-ok-around ("4:00"))))
+      
+      (setq org-clock-out-remove-zero-time-clocks t)
+      
+      ;; Agenda clock report parameters
+      (setq org-agenda-clockreport-parameter-plist
+            (quote (:link t :maxlevel 5 :fileskip0 t :compact t :narrow 80)))
+      ;; Agenda log mode items to display (closed and state changes by default)
+      (setq org-agenda-log-mode-items (quote (closed state)))
+      
+                                          ; Tags with fast selection keys
+      (setq org-tag-alist (quote ((:startgroup)
+                                  ("@errand" . ?e)
+                                  ("@office" . ?o)
+                                  ("@home" . ?H)
+                                  ("@farm" . ?f)
+                                  (:endgroup)
+                                  ("WAITING" . ?w)
+                                  ("HOLD" . ?h)
+                                  ("PERSONAL" . ?P)
+                                  ("WORK" . ?W)
+                                  ("FARM" . ?F)
+                                  ("ORG" . ?O)
+                                  ("NORANG" . ?N)
+                                  ("crypt" . ?E)
+                                  ("NOTE" . ?n)
+                                  ("CANCELLED" . ?c)
+                                  ("FLAGGED" . ??))))
+      
+                                          ; Allow setting single tags without the menu
+      (setq org-fast-tag-selection-single-key (quote expert))
+      
+                                          ; For tag searches ignore tasks with scheduled and deadline dates
+      (setq org-agenda-tags-todo-honor-ignore-options t)
+      
+      (defun bh/clock-in-task-by-id (id)
+        "Clock in a task by id"
+        (org-with-point-at (org-id-find id 'marker)
+          (org-clock-in nil)))
+      
+      (defun bh/clock-in-last-task (arg)
+        "Clock in the interrupted task if there is one
+    Skip the default task and get the next one.
+    A prefix arg forces clock in of the default task."
+        (interactive "p")
+        (let ((clock-in-to-task
+               (cond
+                ((eq arg 4) org-clock-default-task)
+                ((and (org-clock-is-active)
+                      (equal org-clock-default-task (cadr org-clock-history)))
+                 (caddr org-clock-history))
+                ((org-clock-is-active) (cadr org-clock-history))
+                ((equal org-clock-default-task (car org-clock-history)) (cadr org-clock-history))
+                (t (car org-clock-history)))))
+          (widen)
+          (org-with-point-at clock-in-to-task
+            (org-clock-in nil))))
+      
+      ))
 #+end_src
 
 #+RESULTS:
@@ -723,7 +1079,264 @@ Yet another [[http://emacsredux.com/blog/2013/03/30/kill-other-buffers/][gold nu
 
 #+RESULTS:
 : kill-other-buffers
-
+** Windows specific
+#+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
+  (if (string-equal system-type "windows-nt") (progn
+                                                (defun align-set-size ()
+                                                  "Stretch from bottom to top."
+                                                  (interactive)
+                                                  (if (string-equal (window-system) "w32")
+                                                      (set-frame-size (selected-frame) 680 1050 t)))
+  
+                                                (defun align-window ()
+                                                  "Fix window positioning."
+                                                  (interactive)
+                                                  (if (equal (getenv "emacs_alignment") "right")
+                                                      (align-window-right)
+                                                    (align-window-left))
+                                                  ;; (align-set-size)
+                                                  )
+  
+                                                (defun align-window-left ()
+                                                  "Align window to left window edge."
+                                                  (interactive)
+                                                  (set-frame-position (selected-frame) 1 340)
+                                                  ;;(set-frame-position (selected-frame) 2587 494)
+                                                  )
+  
+                                                (defun align-window-right ()
+                                                  "Align window to right window edge."
+                                                  (interactive)
+                                                  ;;  (set-frame-position (selected-frame) -1 320)
+                                                  (set-frame-position (selected-frame) 1921 0)
+                                                  (align-set-size))
+  
+                                                (defvar kc:mprPattern "Mr"
+                                                  "Send2Mach files aresearched for this pattern.")
+  
+                                                (defun kc:mprCheck ()
+                                                  "Check for undeployed machine programs."
+                                                  (interactive)
+                                                  (find-grep-dired "O:/CNCDXF/WEEKE/SEND2MACH"  kc:mprPattern))
+  
+                                                (fset 'remember-parens
+                                                      "\C-so\C-m(\C-e)\274")
+  
+                                                ;; (fset 'export-weeke-flatbed-programs
+                                                ;;    [?% ?m ?. ?* ?m ?p ?r return ?C ?\C-a ?\C-k ?u ?: ?/ return ?R ?\M-b ?\C-k ?S ?T ?E ?R tab return ?g])
+  
+                                                ;; (defun ewfp ()
+                                                ;;   ""
+                                                ;;   (interactive)
+                                                ;;   (if (and (file-exists-p "U:/"))
+                                                ;;       (execute-kbd-macro (symbol-function 'export-weeke-flatbed-programs))
+                                                ;;     (message "Not the \"*Find*\" buffer, or BHP008 is not online.")) )
+  
+                                                (defvar kc:drives '("G" "H" "K" "O" "R" "S" "Y")
+                                                  "Network drives.")
+  
+                                                (defun kc:off-to-the-u (export-machine-backup-dir &optional u)
+                                                  "Exports, then backs up machine programs (only to `U:/' right now) from a Dired `*Find*' buffer."
+                                                  (interactive "DBackup directory: ")
+                                                  (if (not (file-exists-p "U:/"))
+                                                      (progn
+                                                        (ding)
+                                                        (message "BHP008 is currently offline."))
+  
+                                                    (progn
+                                                      (loop for n in (dired-get-marked-files) do
+                                                            (copy-file n "U:/" t)
+                                                            (message (format "Copying `%s'" n)))
+                                                      (if (y-or-n-p "Backup files? ")
+                                                          (progn
+                                                            (loop for n in (dired-get-marked-files) do
+                                                                  (rename-file n export-machine-backup-dir t))
+                                                            (message (format "Backed up to `%s'" export-machine-backup-dir))
+                                                            (revert-buffer))
+                                                        (message "Not backing up.")))))
+  
+                                                (defun kc:off-to-the-machines (export-machine-backup-dir &optional u)
+                                                  ""
+                                                  (interactive "DBackup directory: ")
+                                                  (setq kc:drives '("I" "J" "L" "M" "N" "T"))
+                                                  (loop for n in (dired-get-marked-files) do
+                                                        (loop for m in kc:drives do
+                                                              (if (file-exists-p (concat m ":\\"))
+                                                                  (progn
+                                                                    (copy-file n (concat m ":\\") t)
+                                                                    (message (format "Copying %s to %s" n (concat m ":\\")))))))
+                                                  (if (y-or-n-p "Backup files? ")
+                                                      (progn
+                                                        (loop for n in (dired-get-marked-files) do
+                                                              (rename-file n export-machine-backup-dir t))
+                                                        (message (format "Backed up to `%s'" export-machine-backup-dir))
+                                                        (revert-buffer))
+                                                    (message "Not backing up.")))
+  
+  
+                                                ;; (fset 'fix-Q1s
+                                                ;;    [?\M-x ?r ?e ?p ?l ?a ?c ?e ?- ?s ?t ?r ?i ?n ?g return ?Q ?3 return ?Q ?1 return])
+  
+                                                (defun kc:make-all-Qs-Q1 ()
+                                                  "When there is a single column of parts, Striker starts from Q3.  I made this function for such occasions.  It's bound to C-c q."
+                                                  (interactive)
+                                                  (setq file-to-delete (concat buffer-file-name "~"))
+                                                  (if (and
+                                                       (> (length file-to-delete) 1)
+                                                       (not (string-match "dir.*" (prin1-to-string major-mode)))
+                                                       (string-match "Gcode-.*" (prin1-to-string major-mode))
+                                                       (not (eq (search-forward-regexp "Q3") nil)))
+                                                      (progn
+                                                        (beginning-of-buffer)
+                                                        (replace-string "Q3" "Q1")
+                                                        (save-buffer)
+                                                        (kill-buffer (current-buffer))
+                                                        (if (file-exists-p file-to-delete)
+                                                            (delete-file file-to-delete t)
+                                                          (message "Something isn't right"))
+                                                        (message "Q3s replaced."))
+                                                    (progn
+                                                      (message "We didn't find any Q3s.")
+                                                      (if (string-match "text.*" (prin1-to-string major-mode))
+                                                          (kill-buffer (current-buffer))))))
+  
+  
+  
+                                                (defun kc:check-for-network-drives ()
+                                                  "Checks which drives are online and offline."
+                                                  (interactive)
+                                                  (setq drives kc:drives)
+                                                  (setq online-drives ())
+                                                  (setq offline-drives ())
+                                                  (progn
+                                                    (while drives
+                                                      (if (file-exists-p (concat (car drives) ":/"))
+                                                          (add-to-list 'online-drives (car drives) t)
+                                                        (add-to-list 'offline-drives (car drives) t))
+                                                      (setq drives (cdr drives)))
+                                                    (message (prin1-to-string online-drives))))
+  
+                                                (defun eshell/op (file)
+                                                  "Invoke (w32-shell-execute \"Open\" file) and substitute
+      slashes for backslashes"
+                                                  (w32-shell-execute "Open"
+                                                                     (subst-char-in-string ?\\ ?/ (expand-file-name file)))
+                                                  nil)
+  
+                                                (defun run-bgbd-command ()
+                                                  ""
+                                                  (let ((command-in-file "C:\\Users\\juntunenkc\\Dropbox\\.bgbd")
+                                                        (command-out-file "C:/Users/juntunenkc/Dropbox/out.bgbd")
+                                                        (command-input "")
+                                                        (command-output ""))
+                                                    (if (file-exists-p "C:/Users/juntunenkc/Dropbox/.bgbd")
+                                                        (progn
+                                                          (setq command-input (shell-command-to-string (concat "powershell cat " command-in-file)))
+                                                          (message "Here comes a temp-buffer.")
+                                                          (with-temp-buffer
+                                                            (setq command-output (shell-command-to-string command-input))
+                                                            (insert command-output)
+                                                            (write-file command-out-file)
+                                                            (kill-buffer (current-buffer)))
+                                                          (delete-file command-in-file t))
+                                                      (message (format "%s not found." command-in-file)))))
+  
+                                                (defun bgbd ()
+                                                  ""
+                                                  (interactive)
+                                                  (if (file-exists-p "C:/Users/juntunenkc/Dropbox/.bgbd")
+                                                      (delete-file "C:/Users/juntunenkc/Dropbox/.bgbd"))
+                                                  (setq bgbd-timer (run-at-time "1 sec" 15
+                                                                                (lambda ()
+                                                                                  (if (file-exists-p "C:/Users/juntunenkc/Dropbox/.bgbd")
+                                                                                      (progn
+                                                                                        (run-bgbd-command))
+                                                                                    (progn
+                                                                                      ))))))
+  
+                                                (defun bgbd-stop ()
+                                                  ""
+                                                  (interactive)
+                                                  (cancel-timer bgbd-timer))
+  
+                                                ;; (fset 'take-proc-snapshot
+                                                ;;       [?g ?\C-x ?h ?\M-w ?\C-x ?\C-f ?. ?. ?/ ?. ?. ?/ ?D ?r ?o tab ?p ?r ?o ?c ?. ?s ?n ?a ?p ?s ?o backspace ?h ?o ?t return ?\C-y ?\C-x ?\C-s ?\C-x ?k return])
+  
+                                                ;; (setq proc-snapshot-timer
+                                                ;;       (run-at-time "1 sec" (* 60 60)
+                                                ;;                    (lambda ()
+                                                ;;                      (progn
+                                                ;;                        (delete-file "C:/Users/juntunenkc/Dropbox/proc.snapshot" nil)
+                                                ;;                        (switch-to-buffer "*Proced*")
+                                                ;;                        (execute-kbd-macro 'take-proc-snapshot))
+                                                ;;                      )
+                                                ;;                    ))
+  
+                                                ;; (cancel-timer proc-snapshot-timer)
+  
+  
+  ;;; Setting keys
+                                                ;; (global-set-key "\C-ce" 'kc:off-to-the-machines)
+                                                ;; (global-set-key "\C-cd" 'kc:check-for-network-drives)
+                                                ;; (global-set-key "\C-cq" 'kc:make-all-Qs-Q1)
+                                                ;; (global-set-key "\C-cm" 'kc:mprCheck)
+                                                ;; (global-set-key "\C-c(" 'remember-parens)
+  
+                                                ;; (defun kc:test ()
+                                                ;;   ""
+                                                ;;   (interactive)
+                                                ;;   (progn
+                                                ;;     (beginning-of-buffer)
+                                                ;;     (save-excursion
+                                                ;;     (if (not (eq (search-forward-regexp "Q1") nil))
+                                                ;;         (message "stuff!")))))
+                                                (defun kc/kill-vistaepx64 ()
+                                                  ""
+                                                  (interactive)
+                                                  (mapc 'kc/sub-kill-vstaepx64 (list-system-processes)))
+  
+                                                (defun kc/sub-kill-vstaepx64 (args)
+                                                  ""
+                                                  (if (string= "vsta_epx64.exe" (cdr (assoc 'comm (process-attributes args))))
+                                                      (if (> args 0)
+                                                          (signal-process args 9))))
+                                                (align-window)
+                                                ))
+#+end_src
+* Jabber
+#+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
+  (use-package jabber
+    :ensure t
+    :bind ("C-x j c" . jabber-connect-all)
+    :config
+    (setq jabber-account-list
+          '(("shfengoli@gmail.com"
+             (:network-server . "talk.google.com")
+             (:port . 5222)
+             (:connection-type . starttls)))))
+  
+#+end_src
+* Misc functions
+#+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
+(defun kc:list-connections ()
+  "Lists all Internet IPv4 connections. Ignores intranet connections."
+  (interactive)
+  (let ((kc:lc-column (cond ((string= system-type "windows-nt") 4)
+                            (string= system-type "gnu/linux") 5))
+        (kc:lc-command (cond ((string= system-type "windows-nt") "netstat -n -p TCP")
+                             ((string= system-type "gnu/linux") "ss -4 -t"))))
+    (remove-if
+     (lambda (x) (or (string-match-p "10.10" x) (string= "127.0.0.1" x)))
+     (mapcar
+      (lambda (x)
+        (cond ((string= system-type "windows-nt") (nth 4 x))
+              (string= system-type "gnu/linux") (nth 5 x)))
+      (mapcar
+       (lambda (x) (split-string x ":\\| \+"))
+       (remove-if
+        (lambda (x) (if (and (string-match-p "STAB" x)) nil t))
+        (split-string (shell-command-to-string kc:lc-command) "\n")))))))
+#+end_src
 * Custom file
 #+begin_src emacs-lisp :tangle ~/.emacs.d/init.el
 (setq custom-file (expand-file-name "~/.emacs.d/custom.el"))
